Adicionando los cambios a FX